Front end bug squash
sign in bug corrected,
added feedback to front page
added update feedback

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -79,3 +79,9 @@ text {
     transition: 0.25px;
     cursor: pointer;
 }
+
+#auth-display {
+    position: relative;
+    bottom: 95px;
+    left: 47%;
+}
